--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <!--Footer-->
           <footer class="bg-[#3B71FE]">
             <div class="pt-10">
-              <img src="/images/logo.svg" alt="Keyhome Logo" class="block mr-auto ml-auto w-44">
+              <img src="/images/Logo.svg" alt="Keyhome Logo" class="block mr-auto ml-auto w-44">
             </div>
             <div class="text-center font-['Poppins'] mt-5 text-white">
               <p class="text-sm font-medium mt-6" >Copyright &copy 2021 Iam a Designer. All Rights Reserved.</p>
