--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             <p class="text-sm font-medium mt-6 mb-12" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, fugiat, <span class="block">accusamus! Consequatur suscipit numquam cumque.</span></p>
           </div>
 
-          <div class="block ml-auto mr-auto w-3/4">
-            <img src="/images/App Screenshots.png" alt="Keyhome app Screenshots">
+          <div class="mb-10">
+            <img src="/images/App Screenshots.png" alt="Keyhome app Screenshots" class="block ml-auto mr-auto w-3/4">
           </div>
         </section>
 
